syntax = "proto3";

package parser;

option go_package = ".;parser";

service Parser {
  rpc Download (LinkRequest) returns (StatusReply) {}
}

message LinkRequest {
  string link = 1;
}

message StatusReply {
  int32 status = 1;
  string message = 2;
}